--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/index.html">P's Blog</a>
+            <a class="navbar-brand" href="https://prajwal-patil-inc.github.io/BootStrapProjects/index.html">P's Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -18,13 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="https://prajwal-patil-inc.github.io/BootStrapProjects/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about.html">About</a>
+                        <a class="nav-link active" href="https://prajwal-patil-inc.github.io/BootStrapProjects/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact Us</a>
+                        <a class="nav-link" href="https://prajwal-patil-inc.github.io/BootStrapProjects/contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -145,7 +145,7 @@
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>Need Help?</h2>
               <p>Need help with this page? Click the below button to contact us.</p>
-              <button class="btn btn-outline-secondary" type="button"><a class="nav-link" href="/contact.html"> Contact us </a></button>
+              <button class="btn btn-outline-secondary" type="button"><a class="nav-link" href="https://prajwal-patil-inc.github.io/BootStrapProjects/contact.html"> Contact us </a></button>
             </div>
           </div>
         </div>
